fix: cta container positioning to bottom on mobile

--- a/css/login.css
+++ b/css/login.css
@@ -188,6 +188,7 @@ form>div {
     header {
         padding: 32px 64px 0 64px;
     }
+
     .logo--moved {
         top: 32px;
         left: 32px;
@@ -214,7 +215,7 @@ form>div {
         flex-direction: column;
     }
 
-    .cta-text-mobile-sm	{
+    .cta-text-mobile-sm {
         font-size: 16px !important;
     }
 }
@@ -223,9 +224,17 @@ form>div {
     form {
         padding: 32px 0;
     }
+
     .cta-container {
-        margin: 0 auto;
-        transform: translate(0, 760px);
+        /* margin: 0 auto;
+        transform: translate(0, 760px); */
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        padding: 5rem 0;
     }
 }
 
